@@ -1,5 +1,10 @@
 2006-12-27 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
 
+	* RijndaelManaged.cs:
+	* SimpleRijndaelTransform.cs: 勉強用実装を削除
+
+2006-12-27 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
+
 	* Rijndael.cs: ブロックサイズのステップを32bitから64bitに変更
 	* RijndaelTransform32.cs: 復号用キースケジューリングと定数を追加
 	* RijndaelTransform32Balanced.cs: 基底クラスインターフェイス変更に追従
